--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: php
 
 php:
-  - 5.6.4
+  - 5.6
   - 7.0
   - 7.1
   - hhvm
 
 before_script:
-  - composer install --prefer-source --no-interaction
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
+  - composer install --no-interaction
 
-script: vendor/bin/phpunit
+script:
+  - vendor/bin/phpunit
